[FIX] Margin button small-screen (PBT)

--- a/templates/phpboost/theme/form.css
+++ b/templates/phpboost/theme/form.css
@@ -309,6 +309,13 @@ input.input-minutes { width: 50px;  }
 	}
 }
 
+@media (max-width: 768px) {
+	.form-element-textarea + div.center button,
+	.fieldset-content > div.center button {
+		margin-top: 5px;
+	}
+}
+
 .form-element [id$="user_avatar"] img {
 	max-width: 200px;
 }
